Closed
Bug 543855
Opened 16 years ago
Closed 16 years ago
OS/2 invalid conversion from const char to const unsigned char in gfx/src/thebes/nsSystemFontsOS2
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wuno, Assigned: dragtext)
References
Details
(Whiteboard: simple fix OS/2 only file)
Attachments
(1 file)
|
669 bytes,
patch
|
wuno
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.3a1pre) Gecko/20100202 Minefield/3.7a1pre
Build Identifier:
E:/hg-src/hg/comm-central/mozilla/gfx/src/thebes/nsSystemFontsOS2.cpp: In function 'void QueryFontFromINI(char*, char*, ULONG)':
E:/hg-src/hg/comm-central/mozilla/gfx/src/thebes/nsSystemFontsOS2.cpp:90: error: invalid conversion from 'const char*' to 'const unsigned char*'
E:/hg-src/hg/comm-central/mozilla/gfx/src/thebes/nsSystemFontsOS2.cpp:90: error: invalid conversion from 'char*' to 'const unsigned char*'
Reproducible: Always
| Reporter | ||
Comment 1•16 years ago
|
||
Suddenly, after years w/o warnings or errors compilation fails, after http://hg.mozilla.org/mozilla-central/rev/4e25e2e82747
Rich, would you mind to add your patch suggested in the newsgroup?
Blocks: 502906
Version: unspecified → Trunk
| Reporter | ||
Updated•16 years ago
|
Summary: OS/2 invalid conversion from const char to const unsigned char in gfx/src/thebes/nsSystemFonts → OS/2 invalid conversion from const char to const unsigned char in gfx/src/thebes/nsSystemFontsOS2
| Assignee | ||
Comment 2•16 years ago
|
||
Attachment #429905 -
Flags: review?(wuno)
| Reporter | ||
Updated•16 years ago
|
Attachment #429905 -
Flags: review?(wuno) → review+
| Reporter | ||
Updated•16 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•