Bug 543855: [OS/2] Invalid conversion from const char to const unsigned char in gfx/src/thebes/nsSystemFontsOS2 r=wuno